--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,6 @@
     <string name="error_incorrect_old_password">Your old password was entered incorrectly. Unable to perform change of password.</string>
 
 
-
     <!-- Action TAGs -->
     <string name="LOGIN_TAG">LOGIN_TAG</string>
     <string name="REGISTER_TAG">REGISTER_TAG</string>
@@ -96,4 +95,23 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my_listing">MyListing</string>
 
+
+    <string-array name="tutorialRooms">
+        <item>Select TR</item>
+        <item>TR1</item>
+        <item>TR2</item>
+        <item>TR3</item>
+        <item>TR4</item>
+        <item>TR5</item>
+        <item>TR6</item>
+    </string-array>
+
+    <string-array name="tutorialTimings">
+        <item>Select Time</item>
+        <item>08:00 - 10:00</item>
+        <item>10:00 - 12:00</item>
+        <item>12:00 - 14:00</item>
+        <item>14:00 - 16:00</item>
+        <item>16:00 - 18:00</item>
+    </string-array>
 </resources>
