Included the editing of group scores(for progs) and the broadcasting of news(for admin)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="about">About</string>
     <string name="logout">Logout</string>
     <string name="news_updates">News/Updates</string>
-    <string name="score">Score</string>
+    <string name="view_score">View Score</string>
+    <string name="edit_score">Edit Score</string>
 
     <!-- Button Strings -->
     <string name="navigate">Navigate</string>
